--- a/sponsors/その他-篠ノ井技術クラブ.md
+++ b/sponsors/その他-篠ノ井技術クラブ.md
@@ -1,7 +1,6 @@
-2026年5月30日の「もてぎ大会」に向けて、私たちは自作エコカーの製作に励んでいます。
-現在は、カウルの空力改善とモーターの効率向上に注力しており、
-地元の皆様からの温かいご支援が、部員全員の大きな原動力になっています。
+**【もてぎ大会 挑戦パートナー募集中】**
 
-応援よろしくお願いいたします！
+私たちは自作エコカーで「もてぎ大会」完走を目指すチームです。
+技術指導や資材提供など、様々な形でのサポートをお待ちしております。
 
 https://emr-snn-dev.github.io
